--- a/src/styles.css
+++ b/src/styles.css
@@ -12,7 +12,7 @@ body {
 }
 
 .container {
-  width: 60vw;
+  width: 60%;
   height: 55vh;
   position: absolute;
   top: 50%;
@@ -22,18 +22,12 @@ body {
 }
 
 .cards {
-  width: 33.33%;
+  width: 288px;
   height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: stretch;
   padding: 2em;
   background: hsl(0, 0%, 95%);
-  outline: none;
-}
-
-.logo-vehicle img {
-  width: 48px;
 }
 
 .title-main h2 {
@@ -88,12 +82,17 @@ body {
   color: hsl(179, 100%, 13%);
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 375px) {
   .container {
     display: flex;
     flex-direction: column;
+    width: 80%;
   }
   .cards {
     width: 100%;
+  }
+  .text-description button {
+    position: relative;
+    bottom: 5px;
   }
 }
