--- a/src/styles.css
+++ b/src/styles.css
@@ -22,11 +22,10 @@ body {
 }
 
 .cards {
-  width: 33.3334%;
+  width: 1/3%;
   min-height: 400px;
   display: flex;
   flex-direction: column;
-  align-items: stretch;
   padding: 2em;
   background: hsl(0, 0%, 95%);
   outline: none;
@@ -66,10 +65,17 @@ body {
   background: hsl(179, 100%, 13%);
 }
 
+.text-description {
+  display: flex;
+  flex-wrap: wrap;
+  min-height: 200px;
+  align-content: space-between;
+}
+
 .text-description button {
   position: relative;
-  top: 3em;
-  padding: 0.6em;
+  top: 0em;
+  padding: .6em;
   border: none;
   border-radius: 20px;
   width: 136px;
@@ -90,7 +96,7 @@ body {
 
 /*-----Mobile version-----*/
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 420px) {
   .container {
     display: flex;
     flex-direction: column;
